src/objects/Expense__c.object
<CustomObject>
    <description>Expenses accrued in relation to a DUG, one of its Meetups, or other related activities</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date Expense Was Incurred</description>
        <inlineHelpText>Date Expense Was Incurred</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>InvoiceLineItem__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meetup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Meetup (if any) that this Expense relates to.</description>
        <inlineHelpText>The Meetup (if any) that this Expense relates to.</inlineHelpText>
        <label>Meetup</label>
        <referenceTo>Meetup__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Description__c</columns>
        <columns>Invoice_Line_Item__c</columns>
        <columns>Meetup__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exp-{000000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>